--- a/src/RegistrationForm/RegistrationForm.css
+++ b/src/RegistrationForm/RegistrationForm.css
@@ -5,6 +5,12 @@
   height: 100vh;
 }
 
+form {
+  border: 1px solid black;
+  border-radius: 1rem;
+  padding: 40px;
+}
+
 button {
   width: 100%;
   height: 50px;
