--- a/src/RegistrationForm/RegistrationForm.css
+++ b/src/RegistrationForm/RegistrationForm.css
@@ -9,6 +9,7 @@ form {
   border: 1px solid black;
   border-radius: 1rem;
   padding: 40px;
+  background-color: white;
 }
 
 button {
@@ -16,7 +17,7 @@ button {
   height: 50px;
   padding: 10px;
   border: none;
-  background-color: rebeccapurple;
+  background-color: #a5e4da;
   color: white;
   border-radius: 5px;
   font-weight: bold;
